--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "http-interop/http-factory-guzzle": "^1.0",
         "zendframework/zend-diactoros": "^2.1",
         "doctrine/orm": "^2.6.2",
-        "symfony/yaml": "^4.3"
+        "symfony/yaml": "^4.3",
+        "php-di/php-di": "^6.0"
     },
     "autoload": {
         "psr-4": {
