修正命名空間

--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,7 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\Service\\": "src/Service",
-            "App\\Entity\\": "src/Entity",
-            "App\\Repository\\": "src/Repository"
+            "App\\": "src/"
         }
     }
 }
