--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,8 @@
         "psr-4": {
             "App\\": "src/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^7.5"
     }
 }
