--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "swiftmailer/swiftmailer": "^6.2",
         "doctrine/cache": "^1.8",
         "predis/predis": "^1.1",
-        "ext-redis": "*"
+        "ext-redis": "*",
+        "doctrine/annotations": "^1.8"
     },
     "autoload": {
         "psr-4": {
