--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "doctrine/cache": "^1.8",
         "predis/predis": "^1.1",
         "ext-redis": "*",
-        "doctrine/annotations": "^1.8"
+        "doctrine/annotations": "^1.8",
+        "ext-http": "*"
     },
     "autoload": {
         "psr-4": {
