--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "ext-fileinfo": "*",
         "ext-json": "*",
         "ralouphie/mimey": "^2.1",
-        "gregwar/image": "^2.0"
+        "gregwar/image": "^2.0",
+        "gregwar/captcha": "^1.1"
     },
     "autoload": {
         "psr-4": {
