--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
         "ext-json": "*",
         "ralouphie/mimey": "^2.1",
         "gregwar/image": "^2.0",
-        "gregwar/captcha": "^1.1"
+        "gregwar/captcha": "^1.1",
+        "tuupola/slim-jwt-auth": "^3.4",
+        "vlucas/phpdotenv": "^3.6"
     },
     "autoload": {
         "psr-4": {
