--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "gregwar/image": "^2.0",
         "gregwar/captcha": "^1.1",
         "tuupola/slim-jwt-auth": "^3.4",
-        "vlucas/phpdotenv": "^3.6"
+        "vlucas/phpdotenv": "^3.6",
+        "doctrine/data-fixtures": "^1.3"
     },
     "autoload": {
         "psr-4": {
