--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.5"
+        "phpunit/phpunit": "^7.5",
+        "phpspec/phpspec": "^5.1"
     }
 }
