--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "gregwar/captcha": "^1.1",
         "tuupola/slim-jwt-auth": "^3.4",
         "vlucas/phpdotenv": "^3.6",
-        "doctrine/data-fixtures": "^1.3"
+        "doctrine/data-fixtures": "^1.3",
+        "doctrine/migrations": "^2.2"
     },
     "autoload": {
         "psr-4": {
