--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^7.5",
-        "phpspec/phpspec": "^5.1"
+        "phpspec/phpspec": "^5.1",
+        "fzaninotto/faker": "^1.9"
     }
 }
