--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "tuupola/slim-jwt-auth": "^3.4",
         "vlucas/phpdotenv": "^3.6",
         "doctrine/data-fixtures": "^1.3",
-        "doctrine/migrations": "^2.2"
+        "doctrine/migrations": "^2.2",
+        "jms/serializer": "^1.14"
     },
     "autoload": {
         "psr-4": {
