--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "vlucas/phpdotenv": "^3.6",
         "doctrine/data-fixtures": "^1.3",
         "doctrine/migrations": "^2.2",
-        "jms/serializer": "^1.14"
+        "jms/serializer": "^1.14",
+        "maknz/slack": "^1.7"
     },
     "autoload": {
         "psr-4": {
