--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,7 @@
 {
     "name": "dkben/slim4-api-jwt",
+    "description": "slim4 + jwt + api",
+    "license": "MIT",
     "require": {
         "slim/slim": "4.0.0",
         "slim/psr7": "^0.6.0",
