--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "doctrine/data-fixtures": "^1.3",
         "doctrine/migrations": "^2.2",
         "jms/serializer": "^1.14",
-        "maknz/slack": "^1.7"
+        "maknz/slack": "^1.7",
+        "slim/twig-view": "^2.5"
     },
     "autoload": {
         "psr-4": {
