自動生成API、MVC所需要檔案，未完...#34

--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "doctrine/migrations": "^2.2",
         "jms/serializer": "^1.14",
         "maknz/slack": "^1.7",
-        "slim/twig-view": "^2.5"
+        "slim/twig-view": "^2.5",
+        "mrrio/shellwrap": "^0.4.1"
     },
     "autoload": {
         "psr-4": {
