--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "jms/serializer": "^1.14",
         "maknz/slack": "^1.7",
         "slim/twig-view": "^2.5",
-        "mrrio/shellwrap": "^0.4.1"
+        "mrrio/shellwrap": "^0.4.1",
+        "webmozart/assert": "^1.6"
     },
     "autoload": {
         "psr-4": {
