--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
     "require-dev": {
         "phpunit/phpunit": "^7.5",
         "phpspec/phpspec": "^5.1",
-        "fzaninotto/faker": "^1.9"
+        "fzaninotto/faker": "^1.9",
+        "phpstan/phpstan": "^0.12.8"
     }
 }
