安裝 Swagger 並設定第一個 API 文件 #35

--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "maknz/slack": "^1.7",
         "slim/twig-view": "^2.5",
         "mrrio/shellwrap": "^0.4.1",
-        "webmozart/assert": "^1.6"
+        "webmozart/assert": "^1.6",
+        "zircote/swagger-php": "^3.0"
     },
     "autoload": {
         "psr-4": {
